...
        if !self.game.isMenuOpen {
          AnswerInput(value: self.$feedback.answer, onSubmit: self.handleSubmit, isCorrect: self.answerIsCorrect).modifier(SystemServices())
        }
        if !self.feedback.shouldDisableControls {
          Spacer()
          Button(action: self.handleReveal) {
            Text("Reveal")
              .font(.system(size: 14))
              .foregroundColor(.primary)
              .frame(height: 30)
          }.disabled(self.playback.isPlaying)
        }
      }
...
            Text("Press ").foregroundColor(Color.primary)
            Image(systemName: "play").foregroundColor(Color.accentColor)
            Text(" to begin.").foregroundColor(Color.primary)
          }.frame(width: 200, height: 150)
        }
      } else {
        Text("Enter the word you saw.").frame(width: 200, height: 150)
      }
    }
  }

  var body: some View {
    VStack {
...
  var onContinue: () -> Void

  var body: some View {
    VStack {
      if self.hasRevealed {
        Button(action: self.onContinue) {
          Text("Next word").modifier(FullWidthButtonContent()).padding(.bottom)
        }
      }
      if self.isRevealed {
        Button(action: self.onHide) {
          Text("Hide").modifier(FullWidthGhostButtonContent())
        }
...
        Button(action: self.handleOpenMenu) {
          Image(systemName: "line.horizontal.3").padding(.trailing, 5)
          GameModeIcon(mode: self.game.mode).padding(.trailing)
        }
        Spacer()
        Button(action: self.handleOpenSettings) {
          Image(systemName: "gear").padding(.leading, 5)
        }
      }
      self.content()
    }
    .sheet(isPresented: self.$game.isShowingSettings) {
      GameSettings()
...
        LabeledPicker(selection: self.$settings.maxWordLength, label: "Max word length") {
          ForEach(Self.wordLengths, id: \.self) {
            Text($0 == Int.max ? "Any" : "\($0) letters").tag($0)
          }
        }
      }
      .navigationBarTitle("Settings", displayMode: .inline)
    }
  }
}

struct CurrentWordDisplay: View {
  @EnvironmentObject var playback: PlaybackService
...
// MARK: State/service objects

// https://medium.com/better-programming/swiftui-microservices-c7002228710

enum GameMode: String, CaseIterable {
  case receptive = "Receptive"
  case expressive = "Expressive"
}

struct GameModeIcon: View {
  var mode: GameMode

  private let gameModeIcons = [
...
