...

          StatItemView(label: "Average speed") {
            Text(formatNumber(self.averageSpeed))
          }
        }
      }
      .navigationBarTitle("Stats (Receptive)")
      .navigationBarItems(trailing: Button(action: self.handleToggle) { Text("Done") })
      .listRowInsets(nil)
    }
  }

  private func handleToggle() {
    self.game.toggleSheet(.receptiveStats)
...
